--- a/index.html
+++ b/index.html
@@ -21,10 +21,6 @@
             font-size: 15px; /* Base font size for smaller display */
             margin: 0;
             padding: var(--rabbit-safe-area-inset-top, 20px) 10px 10px;
-            border: 3px solid var(--primary-color);
-            border-radius: 20px; /* Rounded corners like the device */
-            height: calc(100vh - 6px); /* Adjust height for border */
-            box-sizing: border-box;
         }
         .main-view {
             width: 100%;
@@ -131,7 +127,6 @@
             height: 20px;
             display: block;
         }
-        .add-btn-container { text-align: center; margin-top: 15px; }
         .category-header {
             font-size: 1em;
             font-weight: bold;
@@ -157,11 +152,15 @@
         .link-info > *:first-child {
             margin-top: 0;
         }
+        .actions-bar {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 15px;
+        }
         .view-controls {
             display: flex;
-            justify-content: flex-end;
             gap: 10px;
-            margin-bottom: 10px;
         }
         .view-btn {
             cursor: pointer;
@@ -209,18 +208,18 @@
             <input type="text" id="searchInput" placeholder="Search DuckDuckGo...">
             <button id="searchBtn">Search</button>
         </div>
-        <div class="view-controls">
-            <span id="viewListBtn" class="view-btn" title="List View">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z" /></svg>
-            </span>
-            <span id="viewGroupBtn" class="view-btn" title="Group View">
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3h8v8H3V3zm10 0h8v8h-8V3zM3 13h8v8H3v-8zm10 13h8v-8h-8v8z"/></svg>
-            </span>
-        </div>
-        <ul id="linksList"></ul>
-        <div class="add-btn-container">
+        <div class="actions-bar">
+            <div class="view-controls">
+                <span id="viewListBtn" class="view-btn" title="List View">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 4H21V6H3V4ZM3 11H21V13H3V11ZM3 18H21V20H3V18Z" /></svg>
+                </span>
+                <span id="viewGroupBtn" class="view-btn" title="Group View">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M3 3h8v8H3V3zm10 0h8v8h-8V3zM3 13h8v8H3v-8zm10 13h8v-8h-8v8z"/></svg>
+                </span>
+            </div>
             <button id="addBtn">+ Add</button>
         </div>
+        <ul id="linksList"></ul>
     </div>
 
     <script>
@@ -439,7 +438,7 @@
             li.innerHTML = `
                 <div class="link-info">
                     <input type="text" class="new-description" placeholder="Description">
-                    <input type="text" class="new-url" placeholder="URL">
+                    <input type="text" class="new-url" value="https://" placeholder="URL">
                     <select class="new-category">${categoryOptions}</select>
                 </div>
                 <div class="link-actions">
@@ -447,16 +446,21 @@
                 </div>
             `;
             linksList.appendChild(li);
+
+            // Scroll to the new item and focus the description input
+            li.scrollIntoView({ behavior: 'smooth' });
+            li.querySelector('.new-description').focus();
+
             li.querySelector('.save-new-btn').addEventListener('click', () => {
                 const description = li.querySelector('.new-description').value.trim();
                 const url = li.querySelector('.new-url').value.trim();
                 const category = li.querySelector('.new-category').value;
-                if(description && url) {
+                if(description && url && url !== 'https://') {
                     links.push({ description, url, category });
                     saveLinks();
                     renderLinks();
                 } else {
-                    alert('Please fill in both fields.');
+                    alert('Please provide a description and a full URL.');
                 }
             });
         });
