--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             --icon-color: #7a7a7a; /* Slightly darker inactive color */
             --font-family: 'SF Pro Text', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
         }
+        *, *::before, *::after {
+            box-sizing: border-box;
+        }
         body {
             font-family: var(--font-family);
             background-color: var(--bg-color);
@@ -54,15 +57,17 @@
             background-color: var(--item-bg);
             color: var(--font-color);
             font-size: 1em;
+            min-width: 0; /* Fix for flexbox overflow */
         }
         button {
-            padding: 8px 10px;
+            padding: 8px 8px;
             border: none;
             background-color: var(--primary-color);
             color: white;
             border-radius: 8px;
             cursor: pointer;
             font-size: 1em;
+            flex-shrink: 0; /* Prevent buttons from shrinking in flex containers */
         }
         button:hover {
             filter: brightness(1.15);
