Updated website content

--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         .link-actions {
             display: flex;
             gap: 10px;
+            flex-direction: column;
             flex-shrink: 0;
         }
         .link-actions span {
