Updated website content

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <div id="mainView" class="main-view">
         <header><img src="launchpad-logo.png" alt="Launch Pad R1 Logo"></header>
         <div class="search-section">
-            <input type="text" id="searchInput" placeholder="Search DuckDuckGo...">
+            <input type="text" id="searchInput" placeholder="Search DuckDuckGo">
             <button id="searchBtn">Search</button>
         </div>
         <div class="actions-bar">
